# jinja-autodoc

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml  tests.yaml
doc/: conf.py  index.rst
jinja_autodoc/: __init__.py  autojinja.py  autotemplate.py  domain.py  jinjadomain.py
sphinxcontrib/: __init__.py  jinjadomain.py
sphinxcontrib/autojinja/: __init__.py  jinja.py
sphinxcontrib/jinja/: __init__.py
sphinxcontrib/jinjadomain/: __init__.py
tests/: __init__.py  conftest.py  test_autojinja_directive.py  test_autotemplate_directive.py  test_jinja_directive.py
tests/roots/test-autojinja/: conf.py  multiple_comments.rst  templatedir.rst
tests/roots/test-autojinja-pattern/: conf.py
tests/roots/test-autojinja/templatedir/: template1.in
tests/roots/test-autotemplate/: conf.py  index.rst  multiple_comments.rst  multiple_comments_template.in  templatedir.rst
tests/roots/test-autotemplate-pattern/: conf.py
tests/roots/test-autotemplate/templatedir/: template2.in
tests/roots/test-build/: autojinja.rst  conf.py  index.rst
tests/roots/test-jinja/: conf.py  index.rst
tests/test_autojinja_directive/: test_jinja_directive_html.html
tests/test_autotemplate_directive/: test_file_filter.html  test_jinja_directive_html.html  test_several_comments.html  test_templatedir.html
tests/test_jinja_directive/: test_jinja_directive_html.html
