[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sphinxcontrib-jinjadomain"
version = "0.6.0"
description = "Jinja domain for jinja templates"
readme = "README.md"
license = {text = "BSD License"}
requires-python = ">=3.9"
authors = [
  {name = "Jaka Hudoklin", email = "jakahudoklin@gmail.com"},
]
maintainers = [
  {name = "Éloi Rivard", email = "eloi.rivard@nubla.fr"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Documentation",
    "Topic :: Utilities",
]
dependencies = [
    "jinja2>=3.0.0",
    "sphinx>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["sphinxcontrib.jinjadomain"]

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "D", # pydocstyle
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "UP", # pyupgrade
]
ignore = [
    "E501", # line-too-long
    "E722", # bare-except
    "D100", # public module
    "D101", # public class
    "D102", # public method
    "D103", # public function
    "D104", # public package
    "D105", # magic method
    "D106", # nested class
    "D107", # public init
    "D203", # no-blank-line-before-class
    "D213", # multi-line-summary-second-line
]

[tool.ruff.lint.isort]
force-single-line = true

[too.ruff.format]
docstring-code-format = true
